--- a/TextRank/TextRank.ipynb
+++ b/TextRank/TextRank.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,12 +63,12 @@
     "        self.okt = Okt()\n",
     "        self.stopwords = ['중인' ,'만큼', '마찬가지', '꼬집었', \"연합뉴스\", \"데일리\", \"동아일보\", \"중앙일보\", \"조선일보\", \"기자\"\n",
     "        ,\"아\", \"휴\", \"아이구\", \"아이쿠\", \"아이고\", \"어\", \"나\", \"우리\", \"저희\", \"따라\", \"의해\", \"을\", \"를\", \"에\", \"의\", \"가\",'로써',\n",
-    "        '해당']\n",
-    "    def url2sentences(self, url):\n",
+    "        '해당', '합니다']\n",
+    "    def url2sentences(self, url):                   # URL일 경우 Text 추출\n",
     "        article = Article(url, language='ko')\n",
     "        article.download()\n",
     "        article.parse()\n",
-    "        sentences = self.kkma.sentences(article.text)\n",
+    "        sentences = self.kkma.sentences(article.text)   # 텍스트에서 문장별로 반환\n",
     "        print(article.text)\n",
     "        print('*'*120)\n",
     "\n",
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,14 +222,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "이리하고 저리하고..\n\n아무리 열어보려고 해도 꽉 닫혀버린 너!!\n\n생활팁으로 알아보는 간단한 도장 뚜껑 여는법.. 알고보니 참 쉽죠~\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n인터넷 뱅킹을 주로하다보니 은행에 갈 일이.. 일년에 손에 꼽을 정도라고나 할까요?\n\n\n\n\n\n그런데... 이번에 은행 갈일이 생겨서.. 이것저것 챙겨보게 되면서..\n\n도장을 꺼내보았지요.\n\n\n\n\n\n몇 달.. 아니 몇 년만에 마주하는 것만 같은 내 도장..\n\n그동안 잘 있었나? 하고 테스트할겸..뚜껑을 열어보려는데............\n\n\n\n\n\n열리지가 않는다..\n\n꿈쩍도 하지 않는다...\n\n\n\n\n\n이...이럴수가..\n\n\n\n\n\n내 손힘이 약해서 또 못여는구나.. 하며 좌절...\n\n\n\n\n\n​\n\n​\n\n\n\n\n\n\n\n\n\n\n\n\n\n랑~~~~ 이리와서 열어보아요~!!\n\n이럴때는 신랑을 부르는게 최고지요~!\n\n\n\n\n\n평소에도 뚜껑같은 건 잘 못여는저라서..\n\n신랑은 도장가지고 씨름하는 저를 보더니 역시나~ 하는 표정을 지으면서 오는데..\n\n\n\n\n\n훗...\n\n자기도 못 열면서!!\n\n\n\n\n\n어찌나 꽉 닫혀 있는건지.. 꿈쩍도 하지 않는 도장 뚜껑!!\n\n\n\n\n\n너를 어쩌면 좋으란 말이던가..ㅜ^ㅜ\n\n\n\n\n\n​\n\n\n\n\n\n\n\n\n\n​\n\n그래서 급 도장 뚜껑 여는 법을 찾아 헤매이는데~~\n\n아....\n\n어째 팁들이.. 죄... 나무도장이란 말이렷다!!\n\n\n\n\n\n내꺼는.. 아크릴 플라스틱이란 말인데..ㅜ^ㅜ\n\n\n\n\n\n나무도장처럼.. 뜨거운 물에 넣는 것으로는.. 아니 된단 말이죠.. 흑흑흑\n\n\n\n\n\n\n\n\n\n\n\n\n\n* 참고로 나무도장의 경우 컵에 뜨거운 물을 담은 후\n\n그 안에 도장을 5분정도 담가두면 쉽게 열 수 있다고 합니다.\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n하지만!! 저도 해결했답니다~!!\n\n저같은 플라틱 도장은요.. 차가운 냉동실로 고고씽~!!!\n\n\n\n\n\n10분정도 넣어두었다가 꺼내보세요.\n\n​\n\n​\n\n\n\n\n\n\n\n\n\n\n\n\n\n그러면..\n\n그렇게 꽉! 껴서는.. 신랑이 열려고 해도 열리지 않던 도장 뚜껑이..\n\n저의 힘으로도 뽕~! 하고 열린답니다..\n\n\n\n\n\n냉동실에 넣었다가 꺼냈을 뿐인데..\n\n이렇게 쉽게 열리는 것을 보면서 어찌나 신기하던지!!!!\n\n\n\n\n\n괜히 뚜껑 열어보겠다고 낑낑대면서 씨름을 했던 지난 날들이 주마등처럼 스쳐지나가더군요....ㅜ^ㅜ\n\n\n\n\n\n​\n\n​\n\n\n\n\n\n\n\n\n\n​\n\n\n\n\n\n앞으로..\n\n도장 뚜껑 열리지 않는다고.. 씨름하기 있기?없기~?\n\n\n\n\n\n\n\n\n\n없기!!\n\n\n\n\n\n나무도장은 뜨거운 물에..\n\n플라스틱 도장은 냉동실에~\n\n​\n\n우리.. 이젠 손 아파하지 말고.. 쉽게 열어보아요 ^^\n\n\n\n\n\n\n\n\n************************************************************************************************************************\n이럴 때는 신랑을 부르는 게 최고지요~! 평소에도 뚜껑 같은 건 잘 못 여는 저라서.. 신랑은 도장 가지고 씨름하는 저를 보더니 역시나~ 하는 표정을 지으면서 오는데.. 훗... 자기도 못 열면서!! 어찌나 꽉 닫혀 있는 건지.. 꿈쩍도 하지 않는 도장 뚜껑!! 너를 어쩌면 좋으란 말이 던가.. ㅜ^ ㅜ ​ ​ 그래서 급 도장 뚜껑 여는 법을 찾아 헤매이는데~~ 아.... 어째 팁들이.. 죄... 나무도장이란 말이렷다!!\n\n흑 흑흑 * 참고로 나무도장의 경우 컵에 뜨거운 물을 담은 후 그 안에 도장을 5분 정도 담가 두면 쉽게 열 수 있다고\n\n​ ​ 그러면.. 그렇게 꽉! 껴서는.. 신랑이 열려고 해도 열리지 않던 도장 뚜껑이.. 저의 힘으로도 뽕~! 하고 열린답니다..\n\nㅜ^ ㅜ ​ ​ ​ 앞으로.. 도장 뚜껑 열리지 않는다고..\n\n씨름 하기 있기? 없기~? 없기!! 나무도장은 뜨거운 물에.. 플라스틱 도장은 냉동실에~ ​ 우리.. 이젠 손 아파하지 말고.. 쉽게 열어 보아요\n\nkeywords : ['도장', '뚜껑', '나무', '신랑', '씨름', '평소', '표정', '가지', '어쩌면', '보더']\n"
+      "안녕하세요.\n",
+      "\n",
+      "교육상담 전문 학습플래너 김유진입니다.\n",
+      "\n",
+      "​\n",
+      "\n",
+      "동물보건사 자격증이 개설되면서 동물병원에서 근무할 때에\n",
+      "\n",
+      "꼭 필요한 요소로 적용될 예정이며, 그로 인해 수의테크니션을\n",
+      "\n",
+      "희망하거나 애완동물 관련 사업쪽으로 취업하려는 분들께서\n",
+      "\n",
+      "동물보건사 자격증에 대해서 많이들 알아보고계십니다.\n",
+      "\n",
+      "​\n",
+      "\n",
+      "동물보건 관련 전공으로 최소 전문대학교 이상의 학력을 소지하거나\n",
+      "\n",
+      "실무경력이 있어야지만 국가고시를 응시할 수 있습니다.\n",
+      "\n",
+      "2021년부터 수의사법이 개정되고 국가자격으로 시행되면서\n",
+      "\n",
+      "무조건 자격이 있어야지만 수의테크니션으로 근무를 할 수 있다고 합니다.\n",
+      "\n",
+      "​\n",
+      "\n",
+      "학점은행제에는 애완동물관리전공 전문학사학위 과정이\n",
+      "\n",
+      "개설되어있으며, 민간자격증이 아닌 확실한 학력을 취득할 수 있으며\n",
+      "\n",
+      "수의테크니션 자격을 갖추실 수 있습니다. 무엇보다 수능성적도 필요없고\n",
+      "\n",
+      "고등학교 졸업 이상의 학력만 있다면 학점은행제를 이용하실 수 있습니다.\n",
+      "\n",
+      "​\n",
+      "\n",
+      "고졸학력으로 전문학사학위를 취득하려면\n",
+      "\n",
+      "총 80학점을 이수하셔야하고, 애완동물관리전공 전문학사를\n",
+      "\n",
+      "취득하시려면 전공 45학점 + 교양 15학점을 필수로\n",
+      "\n",
+      "충족하고 총 80학점을 이수하셔야 합니다.\n",
+      "\n",
+      "전공 45학점 중에서도 전공필수 18학점을 이수하셔야\n",
+      "\n",
+      "안정적으로 전문학사학위 취득이 가능합니다.\n",
+      "\n",
+      "​\n",
+      "\n",
+      "문제는 온라인강의로 모든 전공학점을 채우는 것이 쉽지 않아서\n",
+      "\n",
+      "대체수단으로 자격증을 취득하셔야해서, 애완동물관리전공을\n",
+      "\n",
+      "진행하는 학생들은 전공자격증인 \"축산산업기사\"자격증을 병행합니다.\n",
+      "\n",
+      "축산산업기사는 학점은행제로 41학점을 보유하고있으면 시험 응시가 가능합니다.\n",
+      "\n",
+      "축산산업기사 자격증 취득 시 전공필수학점으로 인정됩니다.\n",
+      "\n",
+      "​\n",
+      "\n",
+      "학점은행제는 일반대학과 다르게\n",
+      "\n",
+      "학년제가 아닌 학점제로 진행되어서 일정학점을\n",
+      "\n",
+      "취득하면 학위를 수여받을 수 있어서 학점대체 가능한\n",
+      "\n",
+      "자격증,독학사,전적대학점을 활용해서 학습기간을 단축하여\n",
+      "\n",
+      "단기간에 학위취득이 가능합니다.\n",
+      "\n",
+      "​\n",
+      "\n",
+      "애완동물관리 전공 전문학사학위 취득하면 동물보건사\n",
+      "\n",
+      "자격조건이 갖추어지고, 학점은행제 온라인 과정으로\n",
+      "\n",
+      "수의테크니션 자격증 응시자격 조건을 갖출 수 있습니다.\n",
+      "\n",
+      "​\n",
+      "\n",
+      "아래 네임카드를 통한 문의주시면, 학점은행제를 통해\n",
+      "\n",
+      "동물보건사 자격증/수의테크니션 자격증 응시자격 갖추실 수 있도록\n",
+      "\n",
+      "애완동물관리전공 전문학사학위 취득 전과정 책임지고 도움드리겠습니다.\n",
+      "\n",
+      "항시 무료상담 가능하며, 지금도 상담 가능합니다. 감사합니다 :)\n",
+      "************************************************************************************************************************\n",
+      "합니다.\n",
+      "\n",
+      "무엇보다 수능성적도 필요없고 고등학교 졸업 이상의 학력만 있다면 학점은행제를 이용하실 수 있습니다.\n",
+      "\n",
+      "​ 고졸 학력으로 전문학 사학위를 취득하려면 총 80 학점을 이수하셔야 하고, 애완동물관리 전공 전문학 사를 취득하시려면 전공 45 학점 + 교양 15 학점을 필수로 충족하고 총 80 학점을 이수하셔야 합니다.\n",
+      "\n",
+      "​ 학점은행제는 일반대학과 다르게 학년제가 아닌 학점제로 진행되어서 일정 학점을 취득하면 학위를 수여 받을 수 있어서 학점 대체 가능한 자격증, 독 학사, 전적대학점을 활용해서 학습기간을 단축하여 단기간에 학위 취득이 가능합니다.\n",
+      "\n",
+      "​ 애완동물관리 전공 전문학 사학위 취득하면 동물 보건 사 자격조건이 갖추어 지고, 학점은행제 온라인 과정으로 수의 테크니 션 자격증 응시자격 조건을 갖출 수 있습니다.\n",
+      "\n",
+      "keywords : ['자격증', '취득', '애완동물', '전공', '학점은행제', '학위', '보건', '동물', '테크', '관리']\n"
      ]
     }
    ],
