--- a/TextRank/TextRank.ipynb
+++ b/TextRank/TextRank.ipynb
@@ -344,6 +344,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "raw = input()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "자격증 : 11\n취득 : 10\n애완동물 : 6\n전공 : 12\n학점은행제 : 6\n학위 : 7\n보건 : 5\n동물 : 12\n테크 : 5\n관리 : 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in textrank.keywords():\n",
+    "    print(i + ' : ' + str(raw.count(i)))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
