--- a/TextRank/TextRank.ipynb
+++ b/TextRank/TextRank.ipynb
@@ -63,7 +63,7 @@
     "        self.okt = Okt()\n",
     "        self.stopwords = ['중인' ,'만큼', '마찬가지', '꼬집었', \"연합뉴스\", \"데일리\", \"동아일보\", \"중앙일보\", \"조선일보\", \"기자\"\n",
     "        ,\"아\", \"휴\", \"아이구\", \"아이쿠\", \"아이고\", \"어\", \"나\", \"우리\", \"저희\", \"따라\", \"의해\", \"을\", \"를\", \"에\", \"의\", \"가\",'로써',\n",
-    "        '해당', '합니다']\n",
+    "        '해당', '니다']\n",
     "    def url2sentences(self, url):                   # URL일 경우 Text 추출\n",
     "        article = Article(url, language='ko')\n",
     "        article.download()\n",
@@ -197,7 +197,7 @@
     "\n",
     "        return summary\n",
     "\n",
-    "    def keywords(self, word_num=10):\n",
+    "    def keywords(self, word_num=15):\n",
     "        rank = Rank()\n",
     "        rank_idx = rank.get_ranks(self.words_graph)\n",
     "        sorted_rank_idx = sorted(rank_idx, key=lambda k: rank_idx[k], reverse=True)\n",
@@ -229,113 +229,65 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "안녕하세요.\n",
+      "안녕하세요 쏘선생님입니다.\n",
       "\n",
-      "교육상담 전문 학습플래너 김유진입니다.\n",
+      "대학교를 목표로 하시는군요, 애견학과가 있는 학교로는\n",
       "\n",
-      "​\n",
+      "대표적으로 원광대, 신구대, 연희대 등이있습니다.\n",
       "\n",
-      "동물보건사 자격증이 개설되면서 동물병원에서 근무할 때에\n",
+      "애견과인만큼, 이론이나 실무를 공부하겠죠.\n",
       "\n",
-      "꼭 필요한 요소로 적용될 예정이며, 그로 인해 수의테크니션을\n",
+      "만약 취업을 목적으로 하시는거라면, 저는 대학교는 추천드리지 않습니다.\n",
       "\n",
-      "희망하거나 애완동물 관련 사업쪽으로 취업하려는 분들께서\n",
+      "애견분야는 학력이 아닌, 실력과 자격증으로 손님들이 오시는거고,\n",
       "\n",
-      "동물보건사 자격증에 대해서 많이들 알아보고계십니다.\n",
+      "해당 취업기관도 실무능력을 더 우선시합니다.\n",
       "\n",
-      "​\n",
+      "애견학과에 나왔다고 우대를 하는게 아닌, 실력중심으로 우대를 하기에,\n",
       "\n",
-      "동물보건 관련 전공으로 최소 전문대학교 이상의 학력을 소지하거나\n",
+      "실력이 있어야 취득할 수 있는 자격증을 더 봅니다.\n",
       "\n",
-      "실무경력이 있어야지만 국가고시를 응시할 수 있습니다.\n",
+      "애견분야도 여러 분야가 있습니다. 정확히 어느 분야로 취업을 원하시나요?\n",
       "\n",
-      "2021년부터 수의사법이 개정되고 국가자격으로 시행되면서\n",
+      "만약 취업을 원하시는거라면, 저는 자격증을 추천드립니다.\n",
       "\n",
-      "무조건 자격이 있어야지만 수의테크니션으로 근무를 할 수 있다고 합니다.\n",
+      "저는 반려동물관리사 선생님입니다.\n",
       "\n",
-      "​\n",
+      "애견과 관련된 자격증을 취득하고싶거나, 더 자세히 알고싶으시다면\n",
       "\n",
-      "학점은행제에는 애완동물관리전공 전문학사학위 과정이\n",
+      "질문해주세요. 정확하게 답변해드리겠습니다.\n",
       "\n",
-      "개설되어있으며, 민간자격증이 아닌 확실한 학력을 취득할 수 있으며\n",
+      "자신이 원하는 분야와, 목표를 세우고 자격증을 준비하세요.\n",
       "\n",
-      "수의테크니션 자격을 갖추실 수 있습니다. 무엇보다 수능성적도 필요없고\n",
+      "유능한 선생님과 상담해보세요.\n",
       "\n",
-      "고등학교 졸업 이상의 학력만 있다면 학점은행제를 이용하실 수 있습니다.\n",
+      "문의주시면 반려동물관리사 직업 자료와 핵심기출문제 보내드립니다^^\n",
       "\n",
-      "​\n",
+      "(상담문의)\n",
       "\n",
-      "고졸학력으로 전문학사학위를 취득하려면\n",
+      "http://naver.me/I5jden8H\n",
       "\n",
-      "총 80학점을 이수하셔야하고, 애완동물관리전공 전문학사를\n",
-      "\n",
-      "취득하시려면 전공 45학점 + 교양 15학점을 필수로\n",
-      "\n",
-      "충족하고 총 80학점을 이수하셔야 합니다.\n",
-      "\n",
-      "전공 45학점 중에서도 전공필수 18학점을 이수하셔야\n",
-      "\n",
-      "안정적으로 전문학사학위 취득이 가능합니다.\n",
-      "\n",
-      "​\n",
-      "\n",
-      "문제는 온라인강의로 모든 전공학점을 채우는 것이 쉽지 않아서\n",
-      "\n",
-      "대체수단으로 자격증을 취득하셔야해서, 애완동물관리전공을\n",
-      "\n",
-      "진행하는 학생들은 전공자격증인 \"축산산업기사\"자격증을 병행합니다.\n",
-      "\n",
-      "축산산업기사는 학점은행제로 41학점을 보유하고있으면 시험 응시가 가능합니다.\n",
-      "\n",
-      "축산산업기사 자격증 취득 시 전공필수학점으로 인정됩니다.\n",
-      "\n",
-      "​\n",
-      "\n",
-      "학점은행제는 일반대학과 다르게\n",
-      "\n",
-      "학년제가 아닌 학점제로 진행되어서 일정학점을\n",
-      "\n",
-      "취득하면 학위를 수여받을 수 있어서 학점대체 가능한\n",
-      "\n",
-      "자격증,독학사,전적대학점을 활용해서 학습기간을 단축하여\n",
-      "\n",
-      "단기간에 학위취득이 가능합니다.\n",
-      "\n",
-      "​\n",
-      "\n",
-      "애완동물관리 전공 전문학사학위 취득하면 동물보건사\n",
-      "\n",
-      "자격조건이 갖추어지고, 학점은행제 온라인 과정으로\n",
-      "\n",
-      "수의테크니션 자격증 응시자격 조건을 갖출 수 있습니다.\n",
-      "\n",
-      "​\n",
-      "\n",
-      "아래 네임카드를 통한 문의주시면, 학점은행제를 통해\n",
-      "\n",
-      "동물보건사 자격증/수의테크니션 자격증 응시자격 갖추실 수 있도록\n",
-      "\n",
-      "애완동물관리전공 전문학사학위 취득 전과정 책임지고 도움드리겠습니다.\n",
-      "\n",
-      "항시 무료상담 가능하며, 지금도 상담 가능합니다. 감사합니다 :)\n",
+      "핸드폰으로 문자나 카톡 남겨주셔도 됩니다\n",
       "************************************************************************************************************************\n",
-      "합니다.\n",
+      "['자격증', '애견', '취업', '실무', '능력', '손님', '우선', '기관', '시합', '학력', '오시', '문의', '실력', '문제', '자료']\n",
+      "만약 취업을 목적으로 하시는 거라면, 저는 대학교는 추천 드리지 않습니다.\n",
       "\n",
-      "무엇보다 수능성적도 필요없고 고등학교 졸업 이상의 학력만 있다면 학점은행제를 이용하실 수 있습니다.\n",
+      "우대를 하는 게 아닌, 실력 중심으로 우대를 하기에, 실력이 있어야 취득할 수 있는 자격증을 더 봅니다.\n",
       "\n",
-      "​ 고졸 학력으로 전문학 사학위를 취득하려면 총 80 학점을 이수하셔야 하고, 애완동물관리 전공 전문학 사를 취득하시려면 전공 45 학점 + 교양 15 학점을 필수로 충족하고 총 80 학점을 이수하셔야 합니다.\n",
+      "애견분야도 여러 분야가 있습니다.\n",
       "\n",
-      "​ 학점은행제는 일반대학과 다르게 학년제가 아닌 학점제로 진행되어서 일정 학점을 취득하면 학위를 수여 받을 수 있어서 학점 대체 가능한 자격증, 독 학사, 전적대학점을 활용해서 학습기간을 단축하여 단기간에 학위 취득이 가능합니다.\n",
+      "정확히 어느 분야로 취업을 원하시나요?\n",
       "\n",
-      "​ 애완동물관리 전공 전문학 사학위 취득하면 동물 보건 사 자격조건이 갖추어 지고, 학점은행제 온라인 과정으로 수의 테크니 션 자격증 응시자격 조건을 갖출 수 있습니다.\n",
+      "만약 취업을 원하시는 거라면, 저는 자격증을 추천 드립니다.\n",
       "\n",
-      "keywords : ['자격증', '취득', '애완동물', '전공', '학점은행제', '학위', '보건', '동물', '테크', '관리']\n"
+      "keywords : ['자격증', '애견', '취업', '실무', '능력', '손님', '우선', '기관', '시합', '오시', '학력', '문의', '실력', '자료', '직업']\n"
      ]
     }
    ],
    "source": [
     "url = input()\n",
     "textrank = TextRank(url)\n",
+    "print(textrank.keywords())\n",
     "for row in textrank.summarize(5):\n",
     "    print(row)\n",
     "    print()\n",
@@ -344,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,14 +305,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "['자격증',\n",
+       " '애견',\n",
+       " '취업',\n",
+       " '실무',\n",
+       " '능력',\n",
+       " '손님',\n",
+       " '우선',\n",
+       " '기관',\n",
+       " '시합',\n",
+       " '오시',\n",
+       " '학력',\n",
+       " '문의',\n",
+       " '실력',\n",
+       " '문제',\n",
+       " '자료']"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 13
+    }
+   ],
+   "source": [
+    "textrank.keywords()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "자격증 : 11\n취득 : 10\n애완동물 : 6\n전공 : 12\n학점은행제 : 6\n학위 : 7\n보건 : 5\n동물 : 12\n테크 : 5\n관리 : 5\n"
+      "자격증 : 5\n애견 : 6\n취업 : 4\n실무 : 2\n능력 : 1\n손님 : 1\n우선 : 1\n기관 : 1\n시합 : 1\n학력 : 1\n오시 : 1\n문의 : 2\n실력 : 3\n문제 : 1\n자료 : 1\n"
      ]
     }
    ],
